add scalatest dependency httpserver fixed compile error